# airflow3-starter

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  airflow-debug-ticket.md  docker-compose.debug.yaml  docker-compose.yaml  docker-setup.sh  logs1.txt  main.py  nuke.sh  pyproject.toml  requirements.txt  run.sh  sitecustomize.py  test_download.py
.github/workflows/: ci.yaml
config/: airflow.cfg  webserver_config.py
dags/: .airflowignore  download_files.py  hello_world.py  kueue_memory_test.py
dags/utils/: debug_runner.py  debug_utils.py  download_utils.py  get_dag_id.py  kill_port.py
helm/: airflow-dags.yaml  dags-pvc.yaml  kueue-resources.yaml  kueue-values.yaml  logs-pvc.yaml  pod_template.yaml  values.ci.yaml  values.prod.yaml  values.yaml
scripts/: apply_kueue_resources.sh  build_image.sh  ci-local.sh  docker_killall.sh  install_kueue.sh  port_forward_api.sh  sync_dags.sh
tests/: conftest.py  test_deployment.py  utils.py
tests/e2e/: test_kueue_gating.py
tests/integration/: test_airflow_deployment.py
tests/unit/: test_kueue_config.py
