[project]
name = "airflow3-starter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.1.6",
    "aiohttp>=3.9.0",
    "kubernetes>=35.0.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Do not auto-discover conftest options for non-test invocations
addopts = "-v"
